[gd_scene load_steps=11 format=3 uid="uid://bl2xm774sjmm6"]

[ext_resource type="Script" path="res://src/scenes/init/MainScene.gd" id="1_7yre0"]
[ext_resource type="Script" path="res://src/components/GameSettings.gd" id="2_mjoy8"]
[ext_resource type="Script" path="res://src/components/settings/Config.gd" id="3_656kb"]
[ext_resource type="Script" path="res://src/components/controls/CommonControls.gd" id="3_eruj2"]
[ext_resource type="Script" path="res://src/components/sfx/SfxPlayer.gd" id="5_6wmow"]
[ext_resource type="AudioStream" uid="uid://c171lqx3o4q74" path="res://assets/build/ost/section_change_v1.wav" id="6_fue6j"]
[ext_resource type="AudioStream" uid="uid://d238csgqeoqiu" path="res://assets/build/ost/section_select.wav" id="7_66dvc"]
[ext_resource type="AudioStream" uid="uid://dkhl2sdncv4gg" path="res://assets/build/ost/action_select.wav" id="8_kispc"]
[ext_resource type="AudioStream" uid="uid://dfrpg15jmgpg4" path="res://assets/build/ost/main_menu_theme.wav" id="9_3482d"]
[ext_resource type="Script" path="res://src/components/DiscordStatus.gd" id="10_ndvlm"]

[node name="MainScene" type="Node"]
script = ExtResource("1_7yre0")

[node name="CommonControls" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_eruj2")

[node name="Config" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_656kb")

[node name="GameSettings" type="Node" parent="."]
script = ExtResource("2_mjoy8")

[node name="SfxPlayer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_6wmow")

[node name="SectionChanged" type="AudioStreamPlayer" parent="SfxPlayer"]
stream = ExtResource("6_fue6j")
bus = &"sfx"

[node name="SectionSelect" type="AudioStreamPlayer" parent="SfxPlayer"]
stream = ExtResource("7_66dvc")
bus = &"sfx"

[node name="ActionSelect" type="AudioStreamPlayer" parent="SfxPlayer"]
stream = ExtResource("8_kispc")
bus = &"sfx"

[node name="MenuTheme" type="AudioStreamPlayer" parent="SfxPlayer"]
stream = ExtResource("9_3482d")
autoplay = true
bus = &"Music"

[node name="DiscordStatus" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("10_ndvlm")
